syntax = "proto3";

package NYP.NClient.NApi.NProto;

import "yp/client/api/proto/conditions.proto";
import "yp/client/api/proto/data_model.proto";
import "yp/client/api/proto/deploy.proto";
import "yp/client/api/proto/multi_cluster_replica_set.proto";
import "yp/client/api/proto/replica_set.proto";
import "yp/client/api/proto/pod_agent.proto";

import "yt/core/yson/proto/protobuf_interop.proto";

option python_package = "yp_proto.yp.client.api.proto";

option java_package = "ru.yandex.yp.client.api";
option java_outer_classname = "Stage";
option java_multiple_files = true;

option (NYP.NClient.NApi.NProto.object_type) = {
    camel_case_name: "Stage"
    snake_case_name: "stage"
    type_value: 19
};

// Stage - see https://wiki.yandex-team.ru/deploy/Stage

message TStageSpec
{
    // Should be incremented on any update
    // TODO: will be moved to meta after YP-710.
    // For now you can write a manually generated timestamp there.
    uint64 revision = 1 [(NYP.NClient.NApi.NProto.etc) = true];
    // <unit id> -> <unit spec>.
    map<string, TDeployUnitSpec> deploy_units = 2 [(NYT.NYson.NProto.yson_map) = true, (NYP.NClient.NApi.NProto.etc) = true];
    // In form "abc:service:<int id>".
    string account_id = 3;
}

message TStageStatus
{
    // <unit id> -> <unit status>.
    map<string, TDeployUnitStatus> deploy_units = 1 [(NYT.NYson.NProto.yson_map) = true];
    // Revision of spec last treated by controller.
    // Other stage-wide status fields refer to this revision.
    // Unit specs may refer to other revisions, as specified inside them.
    uint64 revision = 2;
    // Stage spec has been accepted by controller as valid.
    NYP.NClient.NApi.NProto.TCondition validated = 3;
    // YP timestamp of spec last treated by controller.
    uint64 spec_timestamp = 4;
}

// Deploy unit

// Network settings for requests from infrastructure.
message TNetworkDefaults
{
    string network_id = 1;
}

message TDeployUnitSpec
{
    TNetworkDefaults network_defaults = 1;

    message TReplicaSetDeploy
    {
        message TPerClusterSettings
        {
            uint32 pod_count = 1;
        }

        NYP.NClient.NApi.NProto.TReplicaSetSpec replica_set_template = 1;
        map<string, TPerClusterSettings> per_cluster_settings = 2 [(NYT.NYson.NProto.yson_map) = true];
    }

    message TMultiClusterReplicaSetDeploy
    {
        NYP.NClient.NApi.NProto.TMultiClusterReplicaSetSpec replica_set = 1;
    }

    oneof pod_deploy_primitive {
        TReplicaSetDeploy replica_set = 10;
        TMultiClusterReplicaSetDeploy multi_cluster_replica_set = 11;
    }

    TTvmConfig tvm_config = 2;
}

message TDeployUnitStatus
{
    // Spec that is currently being deployed. May be older than contents of TStageSpec.
    TDeployUnitSpec current_target = 1;
    // Deploy of current_target has started, but has not completed yet.
    NYP.NClient.NApi.NProto.TCondition in_progress = 2;
    // Deploy of current_target has been completed.
    // May switch back to false if something breaks later.
    NYP.NClient.NApi.NProto.TCondition ready = 3;
    // Summary of deploy progress.
    TDeployProgress progress = 4;
    // Revision of stage from which 'current_target' was derived.
    uint64 target_revision = 5;
    // YP timestamp of stage spec from which 'current_target' was derived.
    uint64 target_spec_timestamp = 6;

    message TReplicaSetDeploy
    {
        message TPerClusterStatus
        {
            // Created replica set id in this cluster.
            string replica_set_id = 1;
            // Created endpoint set id in this cluster.
            string endpoint_set_id = 2;
        }

        // <cluster id> -> <cluster status>.
        map<string, TPerClusterStatus> cluster_statuses = 1 [(NYT.NYson.NProto.yson_map) = true];
    }

    message TMultiClusterReplicaSetDeploy
    {
        message TPerClusterStatus
        {
            // Endpoint set created in this cluster for replica set.
            string endpoint_set_id = 1;
        }

        // Created multi cluster replica set id.
        string replica_set_id = 1;
        // <cluster id> -> <cluster status>.
        map<string, TPerClusterStatus> cluster_statuses = 2 [(NYT.NYson.NProto.yson_map) = true];
    }

    // Details for specific deploy primitives.
    oneof details
    {
        TReplicaSetDeploy replica_set = 10;
        TMultiClusterReplicaSetDeploy multi_cluster_replica_set = 11;
    }
}

// TVM

message TTvmApp
{
    uint32 app_id = 1;
    string alias = 2;
}

message TTvmClient
{
    // secret_selector is used for generating secret env var with
    // predefined name TVM_CLIENT_SECRET. TVM_CLIENT_SECRET env var is written
    // to tvmtool's workload spec only and used for generating tvmtool config.
    // Also secret_selector.alias is the key of secret in TPodSpec.secrets.
    NInfra.NPodAgent.API.SecretEnvSelector secret_selector = 1;
    TTvmApp source = 2;
    repeated TTvmApp destinations = 3;
}

// Config for tvmtool.
// See https://wiki.yandex-team.ru/passport/tvm2/tvm-daemon/ for details.
message TTvmConfig
{
    enum EMode
    {
        UNKNOWN = 0
        [(NYT.NYson.NProto.enum_value_name) = "unknown"];

        DISABLED = 1
        [(NYT.NYson.NProto.enum_value_name) = "disabled"];

        ENABLED = 2
        [(NYT.NYson.NProto.enum_value_name) = "enabled"];
    }
    EMode mode = 1;
    // Blackbox instances to check tickets.
    // See https://wiki.yandex-team.ru/passport/tvm2/tvm-daemon/#lokalno for details.
    string blackbox_environment = 2;
    repeated TTvmClient clients = 3;
    // Port number on which tvmtool listens. It binds to loopback interface only.
    uint32 client_port = 4;
    // Port number to ping tvmtool. It binds to all interfaces.
    uint32 ping_port = 5;
}
